css/style.css
/* ... */
@media (max-width: 768px) {

.home .first-3 {
    
    background-color: rgba(217,214,209,0.9);
    left: 100px;
    width: 320px;
    padding: 0;
    border-radius: 5px;
    margin-top: 10px;
    
}

.home .first-4 {
    
    background-color: rgba(217,214,209,0.9);
    left: 0px;
    width: 320px;
    padding: 0;
    border-radius: 5px;
    margin-top: 10px;
    
}
	.desktop {

		display: none;

	}



	.mobile {

		display: block;

	}



	.mobile.header-top div {

		width: 86%;

		margin: 0 7%;

	}



	.mobile.header-top div img:nth-child(1) {

		width: 150px;

	}



	.mobile.header-bottom nav {

		width: 100%;

	}



	.banner-image {

		width: 100%;

		height: 250px;

	}



	.banner-image div {

		background-position: center center;

	}



	.layer-1-background {

		display: none;

	}



	.content {

		width: 250px;

	}
	
	.content-2 {

		width: 10px;

	}
	
	.content-a {

		width: 10px;

	}



	.content-wrapper {

		margin-top: -40px;

	}
	
	.content-wrapper {

		margin-top: -20px;

	}



	.home .first {

		margin: 0 auto 1em;

		left: 0;

		background-color: rgba(217,214,209,1);

	}



	.home .second {

		width: 280px;

		padding: 20px;

	}



	.home .second h1 {

		font-size: 26px;

	}	



	.home .third {

		width: 320px;

		flex-direction: column;

	}



		.home .third div, .home .third img {

			width: 100%;

			padding: 0;

		}



		.home .third img {

			order: 1;

			height: 200px;

		}



		.home .third div {

			padding-top: 1em;

			padding-bottom: 1em;

			order: 2;

		}



	.home .fourth {

		width: 320px;

		height: auto;

		text-align: center;

	}



		.home .fourth #google-maps {

			height: 175px;

		}



		.home .fourth div:nth-child(2), .home .fourth #google-maps {

			width: 100%;

			padding: 0;

		}



		.home .fourth div:nth-child(2) {

			width: 80%;

			margin: 0 auto;

			padding: 1.5em 0;

		}





	.second {

		width: 70%;

		padding: 10%;

	}



	.page-id-21 .content {

		width: 260px;

		margin: 20px auto;

		padding: 20px;

	}



		.page-id-21 .staff-grid {

			width: 100%;

		}



		.page-id-21 .staff-member {

			width: 90%;

			margin: 10px 0 0 0;

			padding: 5%;

		}



	.page-id-21 .staff-member h2 {

		display: none;

	}



	.page-id-21 .staff-member p:nth-child(2) {

		margin-top: 0;

		font-size: 15px;

	}



	.page-id-21 .staff-member p:nth-child(3) {

		font-size: 15px;

	}



	.page-id-21 .staff-member h5 {

		margin-top: 0.3em;

	}



	.page-id-21 .staff-member h4 {

		font-size: 16px;

		margin-top: 1em;

	}





	/**

	* SERVICES

	**/



	.page-id-46 .services-content, .page-id-91 .services-content {

		width: 100%;

		display: block;

	}



	.page-id-46 .content, .page-id-91 .content {

		width: 240px;

		padding: 30px;

		margin-bottom: 50px;

	}



	.page-id-54 {

		background-color: #082622;

	}



	.page-id-54 section {

		width: 320px;

		margin: 0 auto;

	}



	.page-id-54 .top-wrapper {

		width: 280px;

		padding: 20px;

	}



	.page-id-54 .top-wrapper .top-box {

		padding-top: 0;

	}



	.page-id-54 .grid-div{

		width: 90%;

		padding: 5%;

		display: block;

	}



	.page-id-54 #google-maps-contact {

		width: 90%;

		padding: 0%;

		height: 120px;

		margin: 0 auto;

		display: block;

	}



	.page-id-54 .contact-content {

		padding-top: 125px;

		height: 200px;

		width: 80%;

		padding: 5%;

		margin: 0 auto;

	}



	.page-id-61 .content {

		width: 240px;

		padding: 30px;

	}



	.page-id-61 .content .patient-subcontent {

		float: none;

		width: 100%;

	}



	.page-id-61 .appointment-text span:nth-child(2) {

		float: left;

	}



	footer {

		margin-top: 0;

	}



	.footer-1 .content {

		width: 240px;

	}



	.footer-1 .content div {

		width: 100%;

		text-align:center;

		padding: 0;

	}



	.footer-1 .content div h5 {

			padding-top: 0.75em;

			padding-bottom: 0.75em;

	}



	.footer-1 .content div:nth-child(2) {

		margin-top: 1em;

	}

 .home .first-4 h6 {
    font-size: 16px;
    font-weight: 700;
    background-image: url('../images/Button.png');
    height: 41px;
    width: 226px;
    padding: 30px 20px 10px 0px;
    display: inline-block;
    text-align: center;
    vertical-align: top; 
 }


}

@media (min-width:1112px) and (max-width:1200px){.home .first-2{
    background-color: rgba(217,214,209,.9);
    left: 120px;
    width: 320px;
    padding: 0;
    border-radius: 5px; 
}}

@media (min-width:1023px) and (max-width:1111px){.home .first-2{
    background-color: rgba(217,214,209,.9);
    left: 120px;
    width: 320px;
    padding: 0;
    border-radius: 5px; 
}}


@media (max-width:480px){.content-2{
    position: static;
    width: 10px;
    background-color: #fff;
    margin: 0 auto;
    padding: 50px;
    margin-bottom: 1em;
}
    
    
    .home .first-3 {
    background-color: rgba(217,214,209,0.9);
    left: 100px;
    width: 320px;
    padding: 0;
    border-radius: 5px;
    margin-top: 10px;
    
}

   .home .first-4 {
    background-color: rgba(217,214,209,0.9);
    left: 100px;
    width: 320px;
    padding: 0;
    border-radius: 5px;
    margin-top: 10px;
    
}

 .home .first-4 h6 {
    font-size: 16px;
    font-weight: 700;
    background-image: url('../images/Button.png');
    height: 41px;
    width: 226px;
    padding: 30px 20px 10px 0px;
    display: inline-block;
    text-align: center;
    vertical-align: top; 
 }
    
    
    
}
/* ... */

